# external_quickjs

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  lookaside.txt
msvc/: quickjs-shim.cpp  quickjs.h
quickjs/: quickjs-msvc.cpp  quickjs-staticlib.c  quickjs-wilton.c  quickjs.c  quickjs.h  staticlib-dyload.c  staticlib-noop.c  wilton-dyload.c  wilton-noop.c
resources/: pkg-config.in
resources/quickjs_20200412_cmake/: CMakeLists.txt
resources/quickjs_cmake/: CMakeLists.txt
test/: CMakeLists.txt  quickjs_test.cpp
